--- a/index.html
+++ b/index.html
@@ -18,42 +18,42 @@
             <div class="col-md-6">
                 <h1>Termocity</h1>
                 <p class="lead">Digite o nome da cidade para obter informações de tempo</p>
-                
-                    <div class="form-group">
-                        <label for="estado">Estado:</label>
-                        <select class="form-control" id="estado" onchange="getCidades()">
-                            <option value="">Selecione um estado</option>
-                            <option value="AC">Acre</option>
-                            <option value="AL">Alagoas</option>
-                            <option value="AP">Amapá</option>
-                            <option value="AM">Amazonas</option>
-                            <option value="BA">Bahia</option>
-                            <option value="CE">Ceará</option>
-                            <option value="DF">Distrito Federal</option>
-                            <option value="ES">Espírito Santo</option>
-                            <option value="GO">Goiás</option>
-                            <option value="MA">Maranhão</option>
-                            <option value="MT">Mato Grosso</option>
-                            <option value="MS">Mato Grosso do Sul</option>
-                            <option value="MG">Minas Gerais</option>
-                            <option value="PA">Pará</option>
-                            <option value="PB">Paraíba</option>
-                            <option value="PR">Paraná</option>
-                            <option value="PE">Pernambuco</option>
-                            <option value="PI">Piauí</option>
-                            <option value="RJ">Rio de Janeiro</option>
-                            <option value="RN">Rio Grande do Norte</option>
-                            <option value="RS">Rio Grande do Sul</option>
-                            <option value="RO">Rondônia</option>
-                            <option value="RR">Roraima</option>
-                            <option value="SC">Santa Catarina</option>
-                            <option value="SP">São Paulo</option>
-                            <option value="SE">Sergipe</option>
-                            <option value="TO">Tocantins</option>
-                        </select>
-                    </div>
-                    
-                    <form>
+
+                <div class="form-group">
+                    <label for="estado">Estado:</label>
+                    <select class="form-control" id="estado" onchange="getCidades()">
+                        <option value="">Selecione um estado</option>
+                        <option value="AC">Acre</option>
+                        <option value="AL">Alagoas</option>
+                        <option value="AP">Amapá</option>
+                        <option value="AM">Amazonas</option>
+                        <option value="BA">Bahia</option>
+                        <option value="CE">Ceará</option>
+                        <option value="DF">Distrito Federal</option>
+                        <option value="ES">Espírito Santo</option>
+                        <option value="GO">Goiás</option>
+                        <option value="MA">Maranhão</option>
+                        <option value="MT">Mato Grosso</option>
+                        <option value="MS">Mato Grosso do Sul</option>
+                        <option value="MG">Minas Gerais</option>
+                        <option value="PA">Pará</option>
+                        <option value="PB">Paraíba</option>
+                        <option value="PR">Paraná</option>
+                        <option value="PE">Pernambuco</option>
+                        <option value="PI">Piauí</option>
+                        <option value="RJ">Rio de Janeiro</option>
+                        <option value="RN">Rio Grande do Norte</option>
+                        <option value="RS">Rio Grande do Sul</option>
+                        <option value="RO">Rondônia</option>
+                        <option value="RR">Roraima</option>
+                        <option value="SC">Santa Catarina</option>
+                        <option value="SP">São Paulo</option>
+                        <option value="SE">Sergipe</option>
+                        <option value="TO">Tocantins</option>
+                    </select>
+                </div>
+
+                <form>
                     <div class="form-group">
                         <label for="cidade">Cidade:</label>
                         <select class="form-control" id="city-input">
@@ -75,7 +75,8 @@
         <div class="row">
             <div class="col-sm-4">
                 <h2>Como funciona?</h2>
-                <p>Insira o nome da cidade no campo de busca e clique no botão "Obter Temperatura". Em seguida, a temperatura atual
+                <p>Insira o nome da cidade no campo de busca e clique no botão "Obter Temperatura". Em seguida, a
+                    temperatura atual
                     da cidade será exibida.</p>
             </div>
             <div class="col-sm-4">
@@ -124,45 +125,45 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script>
         const apiKey = '7471f67d0c2aff318a8855c9ab187ebb';
-const apiUrl = 'https://api.openweathermap.org/data/2.5/weather?q=';
-function getCidades() {
-    const estado = document.getElementById("estado").value;
-    const url = `https://servicodados.ibge.gov.br/api/v1/localidades/estados/${estado}/municipios`;
+        const apiUrl = 'https://api.openweathermap.org/data/2.5/weather?q=';
+        function getCidades() {
+            const estado = document.getElementById("estado").value;
+            const url = `https://servicodados.ibge.gov.br/api/v1/localidades/estados/${estado}/municipios`;
 
-    fetch(url)
-        .then(response => response.json())
-        .then(cidades => {
-            const selectCidade = document.getElementById("city-input");
-            selectCidade.innerHTML = "<option value=''>Selecione uma cidade</option>";
-            cidades.forEach(cidade => {
-                const option = document.createElement("option");
-                option.value = cidade.nome;
-                option.innerText = cidade.nome;
-                selectCidade.appendChild(option);
-            });
+            fetch(url)
+                .then(response => response.json())
+                .then(cidades => {
+                    const selectCidade = document.getElementById("city-input");
+                    selectCidade.innerHTML = "<option value=''>Selecione uma cidade</option>";
+                    cidades.forEach(cidade => {
+                        const option = document.createElement("option");
+                        option.value = cidade.nome;
+                        option.innerText = cidade.nome;
+                        selectCidade.appendChild(option);
+                    });
 
 
-        })
-        .catch(error => console.error(error));
-}
-const form = document.querySelector('form');
-form.addEventListener('submit', (event) => {
-    event.preventDefault();
-    const cityInput = document.querySelector('#city-input');
-    const city = cityInput.value;
-    const url = `${apiUrl}${city}&appid=${apiKey}&units=metric`;
-    fetch(url)
-        .then(response => response.json())
-        .then(data => {
-            const temp = data.main.temp;
-            const conditions = data.weather[0].description;
-            const location = data.name;
-            document.querySelector('#temp').textContent = temp+'°C';
-            document.querySelector('#conditions').textContent = conditions;
-            document.querySelector('#location').textContent = location;
-        })
-        .catch(error => console.error(error));
-});
+                })
+                .catch(error => console.error(error));
+        }
+        const form = document.querySelector('form');
+        form.addEventListener('submit', (event) => {
+            event.preventDefault();
+            const cityInput = document.querySelector('#city-input');
+            const city = cityInput.value;
+            const url = `${apiUrl}${city}&appid=${apiKey}&units=metric&lang=pt_br`;
+            fetch(url)
+                .then(response => response.json())
+                .then(data => {
+                    const temp = data.main.temp;
+                    const conditions = data.weather[0].description;
+                    const location = data.name;
+                    document.querySelector('#temp').textContent = temp + '°C';
+                    document.querySelector('#conditions').textContent = conditions;
+                    document.querySelector('#location').textContent = location;
+                })
+                .catch(error => console.error(error));
+        });
     </script>
 </body>
 
