--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <button type="submit" class="btn btn-outline-light">Obter Temperatura</button>
                 </form>
             </div>
-            <div class="col-md-6 m-auto">
+            <div class="col-md-6 mt-3">
                 <h2>Informações de Tempo</h2>
                 <p>Temperatura: <span id="temp"></span></p>
                 <p>Condições climáticas: <span id="conditions"></span></p>
