--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
     </div>
 
-    <footer class="footer bg-dark text-light p-3">
+    <footer class="footer fixed-bottombg-dark text-light p-3">
         <div class="container">
             <div class="text-center">
                 <ul class="list-inline social-icons">
