--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         </div>
     </div>
 
-    <footer class="footer fixed-bottombg-dark text-light p-3">
-        <div class="container">
+    <footer class="footer  bg-dark text-light p-3">
+        <div class="container fixed-bottom">
             <div class="text-center">
                 <ul class="list-inline social-icons">
                     <li class="list-inline-item">
